Mudanças no component Button

--- a/styles/mixins/colors.scss
+++ b/styles/mixins/colors.scss
@@ -1,5 +1,7 @@
 $purple-color: #380558;
 $grey-color: #afafaf;
 $green-color: #0dc74f;
+$white-color: #FFF;
 
+$secondWhite-color: #b4b4b4;
 $secondGreen-color: #01842d;
