--- a/styles/mixins/colors.scss
+++ b/styles/mixins/colors.scss
@@ -1,7 +1,8 @@
 $purple-color: #380558;
-$grey-color: #afafaf;
+$grey-color: #AFAFAF;
 $green-color: #0dc74f;
 $white-color: #FFF;
 
+$secondGray-color: #4A4A4A;
 $secondWhite-color: #b4b4b4;
 $secondGreen-color: #01842d;
