--- a/components/button/button.module.scss
+++ b/components/button/button.module.scss
@@ -7,7 +7,7 @@
     font-weight: bold;
     border: none;
     cursor: pointer;
-    transition: 1s;
+    transition: 0.5s;
 }
 
 .primary{
@@ -24,5 +24,15 @@
     color: $purple-color;
     &:hover{
         background-color: $secondWhite-color;
+    }
+}
+.full{
+    color: $white-color;
+    background-color: $secondGreen-color;
+    padding: 15px;
+    width: 100%;
+    font-size: 20px;
+    &:hover{
+        background-color: $thirdGreen-color;
     }
 }
