--- a/styles/mixins/colors.scss
+++ b/styles/mixins/colors.scss
@@ -6,3 +6,8 @@ $white-color: #FFF;
 $secondGray-color: #4A4A4A;
 $secondWhite-color: #b4b4b4;
 $secondGreen-color: #01842d;
+
+$thirdGreen-color: #0FCE33;
+$thirdGray-color: #c9c9c9;
+
+$fourthGray-color: #F7F7F7;
