--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -12,4 +12,5 @@ body, html{
   overflow-x: hidden;
  background-color: $purple-color; 
  color: $white-color;
+ font-family: Arial, Helvetica, sans-serif;
 }
