--- a/components/contact/contact.module.scss
+++ b/components/contact/contact.module.scss
@@ -11,7 +11,8 @@
     background-image: url("../../public/images/background-welcome.svg");
     background-repeat: no-repeat;
     background-size: cover;
-    gap: 100px;
+    grid-column-start: 2;
+    gap: 15px 100px ;
 }
 
 .texts{
@@ -64,5 +65,13 @@
         padding: 10px;
         margin-bottom: 15px;
         background-color: $fourthGray-color;
+    }
+}
+.footer{
+    text-align: center;
+    display: grid;
+    grid-column-start: 2;
+    span{
+        font-weight: bolder;
     }
 }
