Criação e implementação do component Footer

--- a/styles/mixins/colors.scss
+++ b/styles/mixins/colors.scss
@@ -6,6 +6,7 @@ $white-color: #FFF;
 $secondGray-color: #4A4A4A;
 $secondWhite-color: #b4b4b4;
 $secondGreen-color: #01842d;
+$secondPurple-color: #260038;
 
 $thirdGreen-color: #0FCE33;
 $thirdGray-color: #c9c9c9;
