Alterações finais de scroll e envio de email

--- a/components/welcome/welcome.module.scss
+++ b/components/welcome/welcome.module.scss
@@ -52,7 +52,7 @@
 }
 .DivImage{
     display: flex;
-    justify-content: end;
+    justify-content: flex-end;
     @include Phone{
         // display: flex;
         justify-content: center;
