--- a/styles/mixins/fonts.scss
+++ b/styles/mixins/fonts.scss
@@ -4,6 +4,9 @@
 @mixin SizeExtra{
     font-size: 50px;
 
+    @include PhoneP{
+        font-size: 37px;
+    }
     @include Phone{
         font-size: 35px;
     }
