--- a/styles/mixins/responsive.scss
+++ b/styles/mixins/responsive.scss
@@ -1,5 +1,10 @@
+@mixin PhoneP{
+    @media screen and (max-width: 410px) {
+        @content;
+    }
+}
 @mixin Phone{
-    @media screen and (max-width: 700px) {
+    @media screen and (max-width: 700px) and (min-width: 410px){
         @content;
     }
 }
