--- a/components/footer/footer.module.scss
+++ b/components/footer/footer.module.scss
@@ -8,6 +8,12 @@
     background-color: $secondPurple-color;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    @include PhoneP{
+        margin-top: 80px;
+        display: flex;
+        flex-direction: column;
+        padding: 30px 40px;
+    }
     @include Phone{
         grid-template-columns: repeat(1, 1fr);
         padding: 30px 50px;
@@ -58,14 +64,17 @@
     .containerIcons{
         display: grid;
         grid-template-columns: repeat(4, 2fr);
-        @include Phone{
-            // padding-bottom: 15px;
+        @include PhoneP{
+            padding: 15px;
         }
     }
 }
 .alignRight{
     text-align: end;
-    
+    @include PhoneP{
+        text-align: left;
+        padding-bottom: 15px;
+    }
     @include Phone{
         text-align: left;
         padding-bottom: 15px;
@@ -77,6 +86,11 @@
 .midFooter{
     padding-top: 40px;
     padding-left: 50px;
+    @include PhoneP{
+        padding: 0;
+        padding-top: 15px;
+        padding-bottom: 10px;
+    }
     @include Phone{
         padding: 0;
         padding-top: 10px;
