--- a/components/header/header.module.scss
+++ b/components/header/header.module.scss
@@ -10,7 +10,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    
+    @include PhoneP{
+        padding: 25px 30px;
+    }
     @include Phone{
         padding: 20px 30px;
     }
@@ -35,12 +37,18 @@
     }
 
     }
+    @include PhoneP{
+        display: none;
+    }
     @include Phone{
         display: none;
     }
 
 }
 .action{
+    @include PhoneP{
+        display: none;
+    }
     @include Phone{
         display: none;
     }
